--- a/personal-budget/src/app/app.html
+++ b/personal-budget/src/app/app.html
@@ -1,8 +1,7 @@
 <a href="#main" class="skip">Skip to content</a>
 <pb-menu></pb-menu>
 <pb-hero></pb-hero>
+<pb-breadcrumbs></pb-breadcrumbs>
 <pb-homepage></pb-homepage>
-
-
 <router-outlet></router-outlet>
 <pb-footer></pb-footer>
